fix: minor alignment issues

--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -37,7 +37,7 @@
 
 .account-switch-menu
     position absolute
-    top 80%
+    top 50%
     left 10%
     z-index 1
     overflow auto
@@ -51,7 +51,7 @@
 
     h4
         margin 10px 0
-        padding 0 16px
+        padding 0 19px
         font-size .8em
         color grey-11
 
@@ -82,7 +82,7 @@
     a
         display block
         text-transform uppercase
-        padding 8px 18px
+        padding 8px 19px
         font-size .8em
         font-weight bold
 
